sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: illegal start of statement
	else if (pos==0) {
        ^